# YetAnotherAudiobookConverterScript

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  yaacs.py
.github/workflows/: make-new-release.yml  python-publish.yml
src/yaacs/: __init__.py  cli.py  consts.py  cover.py  dispatch.py  models.py  yaacs.py
src/yaacs/conversion/: multiple.py  single.py
src/yaacs/cue/: __init__.py  cue.lark  models.py  parse.py
