[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"
[project]
name = "yaacs"
version = "1.4.1"
authors = [
        { name="Richard Garber", email="rg.1029384756@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: End Users/Desktop",
    "Topic :: File Formats",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Typing :: Typed",
]
description = "Convert your audiobooks to opus to save space while maintaining quality."
[project.urls]
Homepage = "https://github.com/rgarber11/YetAnotherAudiobookConverterScript/"
Issues = "https://github.com/rgarber11/YetAnotherAudiobookConverterScript/issues"


[project.scripts]
yaacs = "yaacs.yaacs:main"
[tool.setuptools.package-data]
yaacs = ["py.typed"]
[tool.setuptools.packages.find]
where = ["src"]

